refactor(category): use sqlc store to interface with db
